refactor: Update dependencies and build process
- Updated package.json to reflect React 18 and Vite 5.
- Modified build script to include TypeScript compilation.
- Removed CDN links for React, React DOM, Vite, and plugins in index.html, favoring module imports.
- Updated module import map in index.html to point to CDN URLs for external libraries.
- Changed script tag in index.html from `text/babel` to `type="module"` for better Vite integration.
- Corrected import paths for local modules to remove `.tsx` extensions, aligning with standard module resolution.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hostel Entry System</title>
+    <!-- Tailwind CSS via CDN is kept for simplicity. For a full production setup, this would be installed via npm. -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -41,21 +42,23 @@
         }
       }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.4.4/build/qrcode.min.js"></script>
-    <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "react/": "https://aistudiocdn.com/react@^19.1.1/",
+    "vite": "https://aistudiocdn.com/vite@^7.1.6",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.3",
+    "html5-qrcode": "https://aistudiocdn.com/html5-qrcode@^2.3.8",
+    "qrcode": "https://aistudiocdn.com/qrcode@^1.5.4"
   }
 }
 </script>
 </head>
   <body class="bg-gray-bg">
     <div id="root"></div>
-    <script type="text/babel" data-type="module" src="/index.tsx"></script>
+    <!-- This script tag points to your source file. Vite will handle it during development and build. -->
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
